client/local/logs/project.log
2017-06-27T15:22:28.605Z - normal: Load ~/.CocosCreator/settings.json
2017-06-27T15:22:28.610Z - normal: checking language setting...
2017-06-27T15:22:28.610Z - normal: Language: zh
2017-06-27T15:22:29.019Z - success: protocol editor-framework registered
2017-06-27T15:22:29.020Z - success: protocol app registered
2017-06-27T15:22:29.020Z - success: protocol theme registered
2017-06-27T15:22:29.020Z - success: protocol profile registered
2017-06-27T15:22:29.020Z - success: protocol packages registered
2017-06-27T15:22:29.023Z - success: protocol unpack registerred
2017-06-27T15:22:29.023Z - success: protocol disable-commonjs registerred
2017-06-27T15:22:29.298Z - normal: connected!
2017-06-27T15:22:29.301Z - normal: Check project /Users/zhaozhantao/qp/client
2017-06-27T15:22:29.303Z - normal: Initializing Cocos2d
2017-06-27T15:22:29.486Z - normal: Initializing Asset Database
2017-06-27T15:22:29.517Z - success: protocol uuid registerred
2017-06-27T15:22:29.517Z - success: protocol db registerred
2017-06-27T15:22:29.517Z - success: protocol thumbnail registerred
2017-06-27T15:22:29.517Z - normal: Loading editor/builtin packages
2017-06-27T15:22:29.540Z - success: anysdk loaded
2017-06-27T15:22:29.669Z - success: assets loaded
2017-06-27T15:22:29.673Z - success: builder loaded
2017-06-27T15:22:29.678Z - success: hierarchy loaded
2017-06-27T15:22:29.683Z - success: inspector loaded
2017-06-27T15:22:29.685Z - success: keystore loaded
2017-06-27T15:22:29.689Z - success: node-library loaded
2017-06-27T15:22:29.691Z - success: package-asset loaded
2017-06-27T15:22:29.693Z - success: preferences loaded
2017-06-27T15:22:29.707Z - success: project-importer loaded
2017-06-27T15:22:29.710Z - success: project-settings loaded
2017-06-27T15:22:29.714Z - success: ui-kit loaded
2017-06-27T15:22:29.719Z - success: ui-grid loaded
2017-06-27T15:22:29.723Z - success: scene loaded
2017-06-27T15:22:29.724Z - success: sprite-editor loaded
2017-06-27T15:22:29.729Z - success: store loaded
2017-06-27T15:22:29.735Z - success: timeline loaded
2017-06-27T15:22:29.735Z - normal: Loading builtin packages
2017-06-27T15:22:29.740Z - success: asset-db-debugger loaded
2017-06-27T15:22:29.742Z - success: code-editor loaded
2017-06-27T15:22:29.743Z - success: color-picker loaded
2017-06-27T15:22:29.748Z - success: console loaded
2017-06-27T15:22:29.752Z - success: package-manager loaded
2017-06-27T15:22:29.760Z - success: sdkbox loaded
2017-06-27T15:22:29.765Z - success: tester loaded
2017-06-27T15:22:29.770Z - success: ui-kit-preview-extra loaded
2017-06-27T15:22:29.774Z - success: ui-kit-preview loaded
2017-06-27T15:22:29.777Z - success: ui-tree loaded
2017-06-27T15:22:29.824Z - normal: Initializing project /Users/zhaozhantao/qp/client
2017-06-27T15:22:29.826Z - normal: Loading packages
2017-06-27T15:22:29.831Z - normal: Watching packages
2017-06-27T15:22:29.843Z - normal: Run Application
2017-06-27T15:22:30.475Z - success: preview server running at http://localhost:7456
2017-06-27T15:22:34.302Z - normal: 1.5.0
2017-06-27T15:31:29.993Z - normal: Compiled project javascript file successfully
2017-06-27T15:38:14.030Z - normal: Compiled project javascript file successfully
2017-06-27T15:50:08.870Z - failed: [db-task][sync-changes] Failed to import asset /Users/zhaozhantao/qp/client/assets/ui/game/GamePlayerUi.js, message: Compile error: SyntaxError: unknown: Unexpected token, expected , (26:4)
  24 |     }
  25 |     // 发牌
> 26 |     dispatch:function(){
     |     ^
  27 |         this.saySprite.node.active = false;
  28 | 
  29 |     }
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4443:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1755:8)
    at Parser.pp.expect (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1743:33)
    at Parser.pp$3.parseObj (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3968:12)
    at Parser.pp$3.parseExprAtom (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3709:19)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3484:19)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3464:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3394:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3371:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3334:19)
2017-06-27T15:51:16.934Z - failed: [db-task][sync-changes] Failed to import asset /Users/zhaozhantao/qp/client/assets/ui/game/GamePlayerUi.js, message: Compile error: SyntaxError: unknown: Unexpected token, expected , (25:4)
  23 |     }
  24 |     // 发牌
> 25 |     dispatch:function(){
     |     ^
  26 |         this.saySprite.node.active = false;
  27 |         this.cardUi = cc.instantiate(this.GameCardUiPrefab);
  28 |         this.cardUi.parent = this.node;
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4443:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1755:8)
    at Parser.pp.expect (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1743:33)
    at Parser.pp$3.parseObj (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3968:12)
    at Parser.pp$3.parseExprAtom (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3709:19)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3484:19)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3464:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3394:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3371:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3334:19)
2017-06-27T15:51:49.833Z - normal: Compiled project javascript file successfully
